Feature (v0.1.0): Complete CLI transformation to interactive query-based interface
Major UX transformation from command-based to interactive SQL-like query interface:

Core Features:
- Interactive REPL: Replaced argument-based CLI with live interactive shell
- Query Language: Full support for 'from <source> to <dest> [where conditions]' syntax
- Command System: Implemented helper commands (show, status, validate, help, exit, clear)
- Session Management: Persistent data state across operations

CLI Enhancements (src/cli.py):
- InteractiveCLI: New interactive shell with command history
- Query Execution: Direct query parsing and execution with 'from...to...'
- Helper Commands:
  * load <file>: Load data from file
  * save <file>: Save current data
  * convert to <file> [where <conditions>]: Convert with filtering
  * show [path]: Display data or specific path
  * status: Show current session state
  * validate: Run format validation
  * help: Display all commands
  * clear: Clear screen
  * exit: Quit application
- Rich Output: Color-coded messages and formatted data display

Parser Updates (src/parser.py):
- Enhanced query grammar for interactive mode
- Better error messages for malformed queries
- Support for optional path expressions and conditions

Processor Refinements (src/processor.py):
- Improved condition evaluation
- Better Unicode handling in emoji replacement
- Cleaner error reporting

Validation Improvements (src/validation.py):
- ASCII-compatible symbols ([X], [!], [+]) replacing emojis
- Better terminal compatibility

Testing:
- test/cli_test.py: Interactive CLI command testing
- test/grammar_test.py: Query language grammar validation
- test/io_test.py: File I/O operations
- test/parser_test.py: Query parser testing
- test/processor_test.py: Data processing pipeline
- test/validation_test.py: Format validation checks

Configuration:
- Version: 0.1.0 (pyproject.toml)
- Updated package metadata (src/__init__.py)

Breaking Changes:
- Removed argument-based

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dataconverter"
-version = "2.0.0"
+version = "0.1.0"
 description = "Professional CLI tool for converting data between JSON, YAML, TOML, and XML formats"
 requires-python = ">=3.10"
 license = {text = "MIT"}
@@ -34,8 +34,8 @@ dependencies = [
     "jsonpath-ng>=1.6.1",    # JSONPath expressions
     "pyyaml>=6.0.1",         # YAML support
     "xmltodict>=0.13.0",     # XML to dict conversion
-    "typer>=0.12.0",         # CLI framework
     "rich>=13.7.0",          # Beautiful terminal output
+    "toml>=0.10.2",          # TOML support
 ]
 
 # Optional development dependencies
